# HippoCortex

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-language.yml
assets/: README.md
docs/: architecture.md  architecture.mmd
examples/: agent_wrapper.py  quickstart.py
hippocortex/: CHANGELOG.md  LICENSE  README.md  SECURITY.md  __init__.py  __main__.py  config.py  observability.py  pyproject.toml  registry.py  router.py  telemetry.py  types.py  working_memory.py
hippocortex/adapters/: faiss_adapter.py  postgres_adapter.py
hippocortex/consolidation/: distill.py  replay.py
hippocortex/cortex/: semantic_store.py
hippocortex/docs/: architecture.mmd  seo.md
hippocortex/examples/: agent_wrapper.py  quickstart.py
hippocortex/hippo/: episodic_store.py
hippocortex/hippocortex/: __init__.py  config.py  minimal.py  types.py  working_memory.py
hippocortex/hippocortex/adapters/: chroma_adapter.py
hippocortex/hippocortex/consolidation/: replay.py
hippocortex/hippocortex/cortex/: graph_store.py  semantic_store.py  vector_index.py
hippocortex/hippocortex/embedders/: base.py  (+2 more)
hippocortex/scripts/: render_diagram.py
hippocortex/tests/: test_router_policy.py  test_vector_index.py
hippocortex/typescript-sdk/: README.md
hippocortex/utils/: hashing.py
scripts/: check_duplicate_package_mirror.py
tests/: test_config_registry.py  test_consolidation.py  test_episodic_store.py  test_observability.py  test_semantic_store.py  test_working_memory.py
(+1 files in other folders)
