[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hippocortex"
version = "0.1.0"
description = "HippoCortex: dual-memory OS for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "HippoCortex Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
diagram = ["matplotlib>=3.8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
