[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hippocortex"
version = "0.1.0"
description = "HippoCortex: dual-memory OS for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "HippoCortex Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
diagram = ["matplotlib>=3.8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hippocortex*"]
exclude = ["assets*", "tests*", "docs*", "examples*"]
